# pptr

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  license
.github/workflows/: codecov.yml  rust_ci.yml
benches/: actix_bench.rs  master_of_puppets_bench.rs  minions_bench.rs  pptr_bench.rs  primitives_bench.rs  ractor_bench.rs
crates/minions/: Cargo.toml
crates/minions-derive/src/: lib.rs  log_error.rs  magic_handler.rs  message.rs  minion.rs
crates/minions/benches/: coerce_bench.rs  minions_bench.rs  self_call.rs  tokio_bench.rs  vin_bench.rs
crates/minions/src/: address.rs  context.rs  dispatcher.rs  event.rs  gru.rs  lib.rs  magic_handler.rs  message.rs  minion.rs  resources.rs
master_of_puppets_derive/: Cargo.toml
master_of_puppets_derive/src/: lib.rs  message.rs  puppet.rs
minions-derive/: Cargo.toml
minions-derive/src/: lib.rs  message.rs  puppet.rs
praxis-derive/: Cargo.toml
praxis-derive/src/: master.rs
puppeter-derive/: Cargo.toml
src/: address.rs  context.rs  errors.rs  executor.rs  gru.rs  lib.rs  master.rs  master_of_puppets.rs  message.rs  minion.rs  pid.rs  post_office.rs  puppet.rs  puppeteer.rs  puppeter.rs  state.rs  supervision.rs
src/puppet/: executor.rs  lifecycle.rs  manager.rs  service.rs
