[package]
name = "master-of-puppets"
version = "0.1.0"
edition = "2021"

[dependencies]
master-of-puppets-derive = { path = "./master_of_puppets_derive", optional = true }
async-trait = "0.1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.3", features = ["full"] }
tracing = "0.1"
indexmap = "2.1"
rustc-hash = "1.1"
anyhow = "1.0"
async-recursion = "1.0"

[dev-dependencies]
master-of-puppets-derive = { path = "./master_of_puppets_derive" }
actix = "0.13.1"
vin = "9.1"
ractor = "0.9"
criterion = "0.5"
coerce = "0.8.10"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
parking_lot = "0.12.1"

[features]
derive = ["dep:master-of-puppets-derive"]
default = ["derive"]

[[bench]]
name = "master_of_puppets_bench"
harness = false

[[bench]]
name = "tokio_bench"
harness = false

[[bench]]
name = "actix_bench"
harness = false

[[bench]]
name = "vin_bench"
harness = false

[[bench]]
name = "ractor_bench"
harness = false

[[bench]]
name = "coerce_bench"
harness = false

[[bench]]
name = "primitives_bench"
harness = false

[profile.bench]
opt-level = 3
codegen-units = 1
target-cpu = "native"
lto = true
overflow-checks = false
debug = false
