[package]
name = "master-of-puppets"
version = "0.1.0"
edition = "2021"

[dependencies]
master-of-puppets-derive = { path = "./master_of_puppets_derive", optional = true }
async-trait = "0.1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.3", features = ["full"] }
tracing = "0.1"
indexmap = "2.1"
rustc-hash = "1.1"
anyhow = "1.0"
async-recursion = "1.0"

[dev-dependencies]
master-of-puppets-derive = { path = "./master_of_puppets_derive" }
actix = "0.13.1"
vin = "9.1"
ractor = "0.9"
criterion = "0.5"
coerce = "0.8.10"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
parking_lot = "0.12.1"

[features]
derive = ["dep:master-of-puppets-derive"]
default = ["derive"]

[[bench]]
name = "master_of_puppets_bench"
harness = false

[[bench]]
name = "tokio_bench"
harness = false

[[bench]]
name = "actix_bench"
harness = false

[[bench]]
name = "vin_bench"
harness = false

[[bench]]
name = "ractor_bench"
harness = false

[[bench]]
name = "coerce_bench"
harness = false

[[bench]]
name = "primitives_bench"
harness = false

[profile.bench]
opt-level = 3
codegen-units = 1
target-cpu = "native"
lto = true
overflow-checks = false
debug = false

[lints.clippy]
correctness = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
float_cmp = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
string_add = "warn"
try_err = "warn"
must_use_candidate = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
manual_unwrap_or = "warn"
map_unwrap_or = "warn"
unwrap_used = "warn"
expect_used = "warn"
complexity = "warn"
nursery = "warn"
